Colocação do gitignore para os resultados da análise, pois é maior que o limite do GitHub de 100 Mb. config.json remodelado para 5 threads simultâneas. Inserção da instância do sqllite sem dados (limite do GitHub). Ajuste no config.json para parametrizar os locais das comunicações científicas e de onde serão armazenadas as análises. Inserção da explicação dos parâmetros do config.json no README.md. Envaziamento dos dados no banco de dados do sqllite.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
   "excluir_dados": true,
-  "comunicacoes_cientificas_dir": "dados/comunicacoes_cientificas",
-  "threads_quantidade": 10
+  "local_comunicacoes_cientificas": "dados/comunicacoes_cientificas",
+  "local_analise_ngram_frequencia_por_ano": "dados/analise_ngram_frequencia_por_ano.csv",
+  "local_analise_ngram_ocorrencia_por_ano": "dados/analise_ngram_frequencia_por_ano.csv",
+  "threads_quantidade": 5
 }
